--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -3,11 +3,10 @@ name: Say Hello
 on:
     push:
         branches:
-            - main
+            - master
 jobs:
     hello_word:
         runs-on: ubuntu-18.04
         steps:
             - name: Echo the message
               run: echo "Hola christian!"
-              
