--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,3 +10,5 @@ jobs:
         steps:
             - name: Check out repository code
               uses: actions/checkout@v3
+            - name: echo the message
+              run: echo "Hola christian!"
