--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,5 +9,14 @@ jobs:
       runs-on: windows-latest   # alternate runner OS is: ubuntu-latest
   
       steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+        with:
+             lfs: true
+
       - name: powerplatform-actions
-        uses: microsoft/powerplatform-actions@v0.10.10
+        uses: microsoft/powerplatform-actions@who-am-i@v0
+        with:
+          environment-url: 'https://user9-dev.crm.dynamics.com/'
+          user-name: 'user9@wrkdevops.onmicrosoft.com'
+          password-secret: ${{ secrets.password }}
