--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,7 +15,7 @@ jobs:
              lfs: true
 
       - name: powerplatform-actions
-        uses: microsoft/powerplatform-actions@who-am-i@v0
+        uses: microsoft/powerplatform-actions@v0.10.10
         with:
           environment-url: 'https://user9-dev.crm.dynamics.com/'
           user-name: 'user9@wrkdevops.onmicrosoft.com'
